# indexer-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-deployment.yml  docker-compose.yml  flake.nix  setup.sh
.cargo/: config.toml
.sqlx/: query-012ab7af93049cc1fc86df3df4e6f42b8f46700a9e13596b30a83e7e1a25b1b2.json  query-0a17ab24eb4ecd2283108069d8ee8742a1604cbe9edfa2850c932c2a37144e22.json  query-0aa949f69c81fcc34fe9aea9634566fb9fd3c66d64b3a1e056ac0d46333a7142.json  query-1054632822814eb868f8c8231a6b2972fcaa1c493f7eea798a66adab2138fb4d.json  query-153c01f9d565ab546f66cfc136199f7e2f9d29d65f4ea9e2e6a5569902082149.json  query-2397f6c67e910d0cce0132a17a70beea17aabb38e26625a42b5c687cae87dc4d.json  query-2de2c15adfd665f19f413308bb44c20fffd22c1f2efb94e6523f7c6907256f1d.json  query-379a74247af1715403efb686f7d41113cc4955ee6796ec00fd07608e8486ac61.json  query-3b8decb10a8c8d04446abf8e8e65c5e774646ac3200f8d3adf98f8598da5ceee.json  query-41e5daff5829e6d5e93a2367b08bd44d343b7c9a03060e45c2872e20699f746c.json  query-446b2c8b3ea45c22d0508d603841055c80556b3f1b7dc0c8e281e5b6bb6eda70.json  query-45a92b3750c547c3fb54b51f854bd8f228ad40f4a47592f3f508a362e4cb7d3c.json  query-45c23bde7935903024cc42daae9d85efe235e198bc26a8c00e054f8c6335a515.json  query-4e6bb7b6baa75c1edec1242eecece974fb80f2d80e29e287611f27596f768352.json  query-4f065d67576dd10a622d7a5d9d1c11df2f20559ecec08840041907c8462b9545.json  query-5c757db1bada04554b43baab12fea684c978ff43e6efa579d66ce70c2bcc736e.json  query-60341ded20fd9af6810c6b357e866623def24a5ce8acd0829f7b5e9f4499565e.json  query-60d9b223f333f6cf974322f5eb26440ff5b05f649c28a4a9b473b806486ebf17.json  query-6150fc021914d36191fba38cba6d2ea3940777a58b4e32f53560b4658d17d0d9.json  query-675c3a107ef74622112738ea627cce5bad11652fb9366edeae657c68d0bf937e.json  query-75b996c012b9bac0cb6d978b635c71b802b54c333d295b7c9f739943ee0e3e6f.json  query-7dbde7025903617a70507080aaca00dc44fb233e1e9a7e66f41c9620f64bef36.json  query-87454242a84fc51b63033ec0853734c325bb9a50b63860766725a420c80cfdf7.json  query-98331176121ecbb8873af851831e9475056dc2751f27dc5f53db2ed0de8bc927.json  query-a772d48165536dc962af1f985a27d6a9d339c9ad49890f8b186f854d6929f507.json  query-b3bcab367fa50f65dcfbcd7c74e514ae98c24a69d55b672cf7f2c485e323100d.json  query-bc45c9819134121f93735981d76ec39738818b9773bab7304cded2e9e5001708.json  query-cf1894c6067a6f0c40ef129465ed60e550a5afb3406c4a35878258ec5578624e.json  query-e1214f84fcf668fba7a0458b4cb5dba5ca65302256b60cee6d0e447ee9fdef6a.json  query-e4204017e65b8c5235c8e831974f00df487c860371b151a9c4e044d4960d0f46.json  query-e71a89eac4688536b66b7022c09341c5e15ea6647106a8721359cf5af24b3520.json  query-e9d9a0be4be577237f744a99f8838bf94d7d2353620549e1e72f7b8f83e366f6.json  query-ebc928342c07a52ad853cb407bf8caf435aa68d8dabed47f2625799014a63d57.json
grafana/: Dockerfile
migrations/: 20250307110444_initial_schema.down.sql  20250307110444_initial_schema.up.sql
src/: application.rs  config.rs  jetstream_consumer.rs  log.rs  main.rs  metrics_reporter.rs  observability.rs
src/application/: events.rs  types.rs  utils.rs  ws.rs
src/database/: big_update.rs  definitions.rs  handlers.rs  mod.rs  postgres_definitions.rs  repo_indexer.rs  utils.rs
src/database/big_update/: info.rs  queries.rs  types.rs
src/database/repo_indexer/: buffered_items.rs  index_repo.rs  pipeline.rs  repo_stream.rs  repo_stream_nofuture.rs
src/observability/: otel_providers.rs
src/websocket/: conn.rs  events.rs  handler.rs  mod.rs
