[package]
name = "indexer"
version = "2.0.0"
edition = "2021"
authors = ["redsolver", "PancakeTAS"]
description = "ATProto/Bluesky Indexer powered by SurrealDB and Jetstream"

[dependencies]
anyhow = "1.0.93"

hyper = "1.5.1"
hyper-util = "0.1.10"

tokio = { version = "1.41.1", features = ["parking_lot", "rt-multi-thread"] }
tokio-rustls = "0.26.0"
tokio-util = { version = "0.7.13", features = ["io"] }

rsky-pds = { git = "https://github.com/blacksky-algorithms/rsky.git" }

fastwebsockets = { version = "0.8.0", features = ["upgrade"] }

atrium-api = { version = "0.24.8", default-features = false, features = [
    "namespace-appbsky",
    "namespace-chatbsky",
] }

serde = { version = "1.0.215", features = ["derive"] }
simd-json = "0.14.3"

num_cpus = "1.16.0"

log = "0.4.22"

clap = { version = "4.5.21", features = ["derive"] }

colog = "1.3.0"
colored = "2.1.0"
chrono = "0.4.38"

mimalloc = "0.1.43"

surrealdb = { version = "2.1.3", features = [
    "kv-mem",
    "kv-rocksdb",
] }
surrealdb-tikv-client = "0.3.0-surreal.1"

regex = "1.11.1"
lazy_static = "1.5.0"
ipld-core = "0.4.1"

atrium-xrpc-client = "0.5.10"
reqwest = { version = "0.12.9", features = ["json", "stream"] }

iroh-car = "0.5.1"
futures = "0.3.31"
serde_ipld_dagcbor = "0.6.1"
serde_bytes = "0.11.15"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
