[package]
name = "indexer"
version = "2.0.0"
edition = "2021"
authors = ["redsolver", "PancakeTAS"]
description = "ATProto/Bluesky Indexer powered by SurrealDB and Jetstream"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
hyper = "1.6.0"
hyper-util = "0.1.10"
tokio = { version = "1.43.0", features = [
    "parking_lot",
    "rt-multi-thread",
    "tracing",
    "full",
] }
tokio-rustls = "0.26.1"
tokio-util = { version = "0.7.13", features = ["io"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
atrium-api = { version = "0.25.0", default-features = false, features = [
    "namespace-appbsky",
    "namespace-chatbsky",
] }
serde = { version = "1.0.218", features = ["derive"] }
simd-json = "0.14.3"
num_cpus = "1.16.0"
clap = { version = "4.5.31", features = ["derive"] }
colog = "1.3.0"
colored = "3.0.0"
chrono = "0.4.39"
mimalloc = "0.1.43"
surrealdb = { version = "2.2.1", features = ["rustls"] }
# surrealdb-tikv-client = "0.3.0-surreal.1"
regex = "1.11.1"
lazy_static = "1.5.0"
ipld-core = "0.4.2"
atrium-xrpc-client = { version = "0.5.11", default-features = false, features = [
    "reqwest",
] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
    "stream",
    "rustls-tls",
] }
iroh-car = "0.5.1"
futures = "0.3.31"
serde_ipld_dagcbor = "0.6.2"
serde_bytes = "0.11.15"
async-channel = "2.3.1"
console-subscriber = "0.4.1"
opentelemetry = { version = "0.28.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.28.0", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.28.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.28.0", default-features = false, features = [
    "http-proto",
    "trace",
    "metrics",
    "logs",
    "internal-logs",
    "reqwest-rustls",
    "grpc-tonic",
    "metrics",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
opentelemetry-appender-tracing = "0.28.1"
tonic = "0.12.3"
opentelemetry-semantic-conventions = { version = "0.28.0", features = [
    "semconv_experimental",
] }
tracing-opentelemetry = "0.29.0"
opentelemetry-resource-detectors = "0.7.0"
sys-info = "0.9.1"
sysinfo = "0.33.1"
rs-car-sync = "0.4.1"
serde_with = "3.12.0"
pin-project-lite = "0.2.16"
pumps = "0.0.4"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "sqlite",
    "uuid",
    "chrono",
    "json",
    "postgres",
    "migrate",
] }
serde_json = "1.0.140"

[profile.release]
# Enable lto for best performance
lto = "fat"
# One codegen unit for better intracrate optimization
codegen-units = 1
# Include some debug info for better crash reports
strip = false
debug = "line-tables-only"

# Profile with lto for testing performance in development
[profile.dev-lto]
inherits = "release"
codegen-units = 16
lto = "thin"
strip = false
debug = "full"
incremental = true
